--- a/nerdle/src/app/app.component.html
+++ b/nerdle/src/app/app.component.html
@@ -3,6 +3,31 @@
     <a class ="teamname">by yorm</a>
 </div>
 
+<div class = "main-content">
+    <div class = "boxes">
+        <ng-container *ngFor = "let item of boxes">
+            <div class = "parent-box">
+                <ng-container *ngFor="let innerItem of item">
+                    <div class ="child-box">{{innerItem.key}}</div>
+                </ng-container>
+            </div>
+        </ng-container>
+    </div>
+    <div class = "keyboard">
+        <ng-container *ngFor="let item of keyboard">
+            <ng-container *ngIf="(item.key!=='ENTER')&&(item.key!=='BACKSPACE')">
+                <Button (click)="handleChange(item.key)"> {{item.key}}</Button>
+            </ng-container>
+            <ng-container *ngIf="item.key==='BACKSPACE'">
+                <Button style="width: 92px;" (click)="handleChange(item.key)"> {{item.key}}</Button>
+            </ng-container>
+            <ng-container *ngIf="item.key==='ENTER'">
+                <Button style="width: 70px;" (click)="handleChange(item.key)"> {{item.key}}</Button>
+            </ng-container>
+        </ng-container>
+    </div>
+</div>
+<!--
 <div class = "grid-container">
     <grid class = "grid-item"></grid>
     <grid class = "grid-item"></grid>
@@ -54,3 +79,4 @@
     <grid class = "grid-item"></grid>
 
 </div>
+-->
