--- a/nerdle/src/app/app.component.scss
+++ b/nerdle/src/app/app.component.scss
@@ -21,3 +21,42 @@
     column-gap: 5px;
     row-gap: 5px;
 }
+
+.main-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+}
+
+.parent-box{
+    display:flex;
+    align-items: center;
+    gap: 3px;
+
+}
+
+.child-box{
+    height: 62px;
+    width: 62px;
+    border: 2px solid skyblue;
+    margin: 3px;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 50px;
+}
+
+.keyboard{
+    width: 512px;
+    flex-wrap: wrap;
+    display: flex;
+}
+.keyboard button{
+    height: 40px;
+    width: 50px;
+    margin: 3px;
+    border: 1px solid skyblue;
+    border-radius: 0%;
+}
