--- a/nerdle/src/app/app.component.scss
+++ b/nerdle/src/app/app.component.scss
@@ -46,6 +46,7 @@
     align-items: center;
     justify-content: center;
     font-size: 50px;
+    border-radius: 4px;
 }
 
 .keyboard{
@@ -58,5 +59,9 @@
     width: 50px;
     margin: 3px;
     border: 1px solid skyblue;
-    border-radius: 0%;
+    border-radius: 4px;
+}
+
+.keyboard button:hover{
+    background-color: skyblue;
 }
