--- a/nerdle/src/app/app.component.html
+++ b/nerdle/src/app/app.component.html
@@ -16,13 +16,13 @@
     <div class = "keyboard">
         <ng-container *ngFor="let item of keyboard">
             <ng-container *ngIf="(item.key!=='ENTER')&&(item.key!=='BACKSPACE')">
-                <Button (click)="handleChange(item.key)"> {{item.key}}</Button>
+                <Button (click)="regularChange(item.key)"> {{item.key}}</Button>
             </ng-container>
             <ng-container *ngIf="item.key==='BACKSPACE'">
-                <Button style="width: 92px;" (click)="handleChange(item.key)"> {{item.key}}</Button>
+                <Button style="width: 92px;" (click)="deleteChange(item.key)"> {{item.key}}</Button>
             </ng-container>
             <ng-container *ngIf="item.key==='ENTER'">
-                <Button style="width: 70px;" (click)="handleChange(item.key)"> {{item.key}}</Button>
+                <Button style="width: 70px;" (click)="enterChange(item.key)"> {{item.key}}</Button>
             </ng-container>
         </ng-container>
     </div>
