added color implementation with false answer, cannot get boxes to change color but they belong to correct class

--- a/nerdle/src/app/app.component.scss
+++ b/nerdle/src/app/app.component.scss
@@ -65,3 +65,12 @@
 .keyboard button:hover{
     background-color: skyblue;
 }
+.yellow{
+    background-color: yellow;
+}
+.grey{
+    background-color: grey;
+}
+.green{
+    background-color: green;
+}
