--- a/nerdle/src/app/app.component.scss
+++ b/nerdle/src/app/app.component.scss
@@ -1,6 +1,11 @@
+.page {
+    background-color: F4F5F4;
+}
+
 .header {
     font-size: 60px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: #011627;
     font-weight: 300;
     text-align: center;
     margin-top: 30px;
@@ -15,7 +20,6 @@
     display: grid;
     justify-content: center;
     align-content: center;
-
     width: auto;
     grid-template-columns: auto auto auto auto auto auto auto auto;
     column-gap: 5px;
@@ -29,36 +33,51 @@
     height: 100vh;
 }
 
+.boxes{
+    padding-bottom: 10px;
+}
+
 .parent-box{
+
     display:flex;
     align-items: center;
-    gap: 3px;
-
+    height: 72px;
+    padding-bottom:8px;
 }
 
 .child-box{
-    height: 62px;
-    width: 62px;
-    border: 2px solid skyblue;
+    height: 72px;
+    width: 72px;
+    background-color: skyblue;
     margin: 3px;
-    box-sizing: border-box;
+   // box-sizing: border-box;
     display: flex;
+
     align-items: center;
     justify-content: center;
-    font-size: 50px;
+    font-size: 45px;
     border-radius: 4px;
+    font-family: Tahoma, Verdana, sans-serif;
+    color: #011627;
 }
 
 .keyboard{
-    width: 512px;
+    width: 650px;
     flex-wrap: wrap;
     display: flex;
+    justify-content: center;
 }
 .keyboard button{
-    height: 40px;
-    width: 50px;
+    padding: 0;
+    border: none;
+    background:#D6D6D6;
+    color: #011627;
+    align-items: center;
+    font-family: Tahoma, Verdana, sans-serif;
+    font-weight: bold;
+    height: 50px;
+    width: 55px;
     margin: 3px;
-    border: 1px solid skyblue;
     border-radius: 4px;
 }
 
