added dynamic class for the boxes to accomodate color change

--- a/nerdle/src/app/app.component.html
+++ b/nerdle/src/app/app.component.html
@@ -11,7 +11,7 @@
             <ng-container *ngFor = "let item of boxes">
                 <div class = "parent-box">
                     <ng-container *ngFor="let innerItem of item">
-                        <div class ="child-box">{{innerItem.key}}</div>
+                        <div [ngClass] ="innerItem.class">{{innerItem.key}}</div>
                     </ng-container>
                 </div>
             </ng-container>
