--- a/nerdle/src/app/app.component.scss
+++ b/nerdle/src/app/app.component.scss
@@ -84,3 +84,64 @@
 .keyboard button:hover{
     background-color: skyblue;
 }
+
+.green{
+    height: 72px;
+    width: 72px;
+    background-color: green;
+    margin: 3px;
+   // box-sizing: border-box;
+    display: flex;
+
+    align-items: center;
+    justify-content: center;
+    font-size: 45px;
+    border-radius: 4px;
+    font-family: Tahoma, Verdana, sans-serif;
+    color: #011627;
+}
+.yellow{
+    height: 72px;
+    width: 72px;
+    background-color: yellow;
+    margin: 3px;
+   // box-sizing: border-box;
+    display: flex;
+
+    align-items: center;
+    justify-content: center;
+    font-size: 45px;
+    border-radius: 4px;
+    font-family: Tahoma, Verdana, sans-serif;
+    color: #011627;
+}
+.grey{
+    height: 72px;
+    width: 72px;
+    background-color: grey;
+    margin: 3px;
+   // box-sizing: border-box;
+    display: flex;
+
+    align-items: center;
+    justify-content: center;
+    font-size: 45px;
+    border-radius: 4px;
+    font-family: Tahoma, Verdana, sans-serif;
+    color: #011627;
+}
+.empty{
+    height: 72px;
+    width: 72px;
+    background-color: skyblue;
+    margin: 3px;
+   // box-sizing: border-box;
+    display: flex;
+
+    align-items: center;
+    justify-content: center;
+    font-size: 45px;
+    border-radius: 4px;
+    font-family: Tahoma, Verdana, sans-serif;
+    color: #011627;
+}
