--- a/nerdle/src/app/app.component.scss
+++ b/nerdle/src/app/app.component.scss
@@ -45,21 +45,21 @@
     padding-bottom:8px;
 }
 
-.child-box{
-    height: 72px;
-    width: 72px;
-    background-color: skyblue;
-    margin: 3px;
-   // box-sizing: border-box;
-    display: flex;
+// .child-box{
+//     height: 72px;
+//     width: 72px;
+//     background-color: black;
+//     margin: 3px;
+//    // box-sizing: border-box;
+//     display: flex;
 
-    align-items: center;
-    justify-content: center;
-    font-size: 45px;
-    border-radius: 4px;
-    font-family: Tahoma, Verdana, sans-serif;
-    color: #011627;
-}
+//     align-items: center;
+//     justify-content: center;
+//     font-size: 45px;
+//     border-radius: 4px;
+//     font-family: Tahoma, Verdana, sans-serif;
+//     color: #011627;
+// }
 
 .keyboard{
     width: 650px;
@@ -70,7 +70,7 @@
 .keyboard button{
     padding: 0;
     border: none;
-    background:#D6D6D6;
+    background:#adadad;
     color: #011627;
     align-items: center;
     font-family: Tahoma, Verdana, sans-serif;
@@ -82,7 +82,7 @@
 }
 
 .keyboard button:hover{
-    background-color: skyblue;
+    background-color: #5e5e5e;
 }
 
 .green{
@@ -133,7 +133,7 @@
 .empty{
     height: 72px;
     width: 72px;
-    background-color: skyblue;
+    background-color: #dbdbdb;
     margin: 3px;
    // box-sizing: border-box;
     display: flex;
