Jade: updated presentation

--- a/nerdle/src/app/app.component.scss
+++ b/nerdle/src/app/app.component.scss
@@ -82,13 +82,13 @@
 }
 
 .keyboard button:hover{
-    background-color: #5e5e5e;
+    background-color: #C5BEC0;
 }
 
 .green{
     height: 72px;
     width: 72px;
-    background-color: green;
+    background-color: #8DAB7F;
     margin: 3px;
    // box-sizing: border-box;
     display: flex;
@@ -103,7 +103,7 @@
 .yellow{
     height: 72px;
     width: 72px;
-    background-color: yellow;
+    background-color: #B0DAFD;
     margin: 3px;
    // box-sizing: border-box;
     display: flex;
@@ -118,7 +118,7 @@
 .grey{
     height: 72px;
     width: 72px;
-    background-color: grey;
+    background-color: #C5BEC0;
     margin: 3px;
    // box-sizing: border-box;
     display: flex;
