Jade: random equations now accessible for play

--- a/nerdle/src/app/app.component.html
+++ b/nerdle/src/app/app.component.html
@@ -6,7 +6,7 @@
         </div>
         <a class ="teamname">by yorm</a>
         <div class="theme">
-            <mat-slide-toggle (click)="toggleTheme()"></mat-slide-toggle>
+            <mat-slide-toggle ></mat-slide-toggle>
         </div>
     </div>
     
