--- a/nerdle/src/app/success-alert-dialog/success-alert-dialog.component.html
+++ b/nerdle/src/app/success-alert-dialog/success-alert-dialog.component.html
@@ -1,7 +1,7 @@
 <div mat-dialog-content class="border border-success border-3 bg-success" style="--bs-bg-opacity: .2;">
     <div class="row mt-2 pe-3">
         <div class="col-1">
-            <mat-icon color="text-success" >check_circle_outline</mat-icon>
+            <mat-icon color="green" >check_circle_outline</mat-icon>
         </div>
         <div class="col ms-4">
             <p><strong>Success</strong></p>
