timing added back to dialog

--- a/nerdle/src/app/app.component.scss
+++ b/nerdle/src/app/app.component.scss
@@ -78,7 +78,7 @@
 .green{
     height: 72px;
     width: 72px;
-    background-color: var(--g); //color of box
+    background-color: lightgreen; //color of box
     color: var(--bkg-color); //color of text
     margin: 3px;
    // box-sizing: border-box;
@@ -93,7 +93,7 @@
 .yellow{
     height: 72px;
     width: 72px;
-    background-color: var(--y); //color of box
+    background-color: lightyellow; //color of box
     color: var(--text-color); //color of text
     margin: 3px;
    // box-sizing: border-box;
