Jade: changed colors rq

--- a/nerdle/src/app/app.component.scss
+++ b/nerdle/src/app/app.component.scss
@@ -93,8 +93,8 @@
 .yellow{
     height: 72px;
     width: 72px;
-    background-color: lightyellow; //color of box
-    color: var(--text-color); //color of text
+    background-color: #fdfd96; //color of box
+    color: var(--bkg-color); //color of text
     margin: 3px;
    // box-sizing: border-box;
     display: flex;
