Jade: finished theme toggle button

--- a/nerdle/src/app/app.component.html
+++ b/nerdle/src/app/app.component.html
@@ -6,7 +6,7 @@
         </div>
         <a class ="teamname">by yorm</a>
         <div class="theme">
-            <mat-slide-toggle ></mat-slide-toggle>
+            <button class="icon-button-large" mat-icon-button (click) = "toggleTheme()"><mat-icon>wb_sunny</mat-icon></button>
         </div>
     </div>
     
