kermit image without background put in right corner

--- a/nerdle/src/app/app.component.scss
+++ b/nerdle/src/app/app.component.scss
@@ -57,9 +57,12 @@
     height: 72px;
     padding-bottom:8px;
 }
-
 .left-side{
     width: 25%;
+}
+.right-side{
+    width: 25%;
+    margin-top: 35%;
 }
 
 .keyboard{
