--- a/nerdle/src/app/kermit-component/kermit-component.component.scss
+++ b/nerdle/src/app/kermit-component/kermit-component.component.scss
@@ -1,4 +1,4 @@
 .kermit-image{
-    width: 90%;
-    background-color: var(--bkg-color);
+    width: 95%;
+   // background-color: var(--bkg-color);
 }
