--- a/nerdle/src/app/app.component.html
+++ b/nerdle/src/app/app.component.html
@@ -1,7 +1,6 @@
 <div class="page">
-    <div class = "left-side">
-        <app-kermit-component></app-kermit-component>
-    </div>
+    <div class = "left-side"></div>
+
     <div class="middle-content">
         <div class="header">
             <div class="title">
@@ -39,6 +38,8 @@
             </div>
         </div>
     </div>
-    <div class = "right-side"></div>
+    <div class = "right-side">
+        <app-kermit-component></app-kermit-component>
+    </div>
 </div>
 
