adding grey logic on guess

--- a/nerdle/src/styles.scss
+++ b/nerdle/src/styles.scss
@@ -7,8 +7,9 @@ body { //dark mode is the default
     --text-color: #DBDBDB;
     --bkg-color: #011627;
     --box-color: #DBDBDB;
+    //background color for keyboard 
     --key-color: #304556;
-    --r: #304556;
+    --r: #636363;
     --y: #fdfd96;
     --g: lightgreen;
     --sun: #ffff00;
