--- a/nerdle/src/app/app.component.scss
+++ b/nerdle/src/app/app.component.scss
@@ -154,7 +154,7 @@ button[mat-icon-button]{
     height: 72px;
     width: 72px;
     background-color: var(--r);
-    color: var(--text-color);
+    color: var(--b);
     margin: 3px;
    // box-sizing: border-box;
     display: flex;
@@ -190,6 +190,11 @@ button[mat-icon-button]{
 
 .keyboard button.key-yellow {
     background-color: var(--y) !important; 
+    color: var(--bkg-color);
+}
+
+.keyboard button.key-grey {
+    background-color: var(--r) !important; 
     color: var(--bkg-color);
 }
 
