Program now only accepts valid equations for guesses

--- a/src/app/success-alert-dialog/success-alert-dialog.component.html
+++ b/src/app/success-alert-dialog/success-alert-dialog.component.html
@@ -2,7 +2,7 @@
     <div class="row mt-2 pe-3">
         <div class="col-1">
             <mat-icon color="green" >check_circle_outline</mat-icon>
-            <p><strong>Success</strong></p>
+            <p><strong>Success!</strong></p>
         </div>
     </div>
     <div class="row">    
