--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
             </div>
             <a class ="teamname">by yorm</a>
             <div class="theme">
-                <button class="icon-button-large" mat-icon-button (click) = "toggleTheme()"><mat-icon>wb_sunny</mat-icon></button>
+                <button class="icon-button-large" mat-icon-button (click) = "toggleTheme($event)"><mat-icon>wb_sunny</mat-icon></button>
             </div>
         </div>
         
